--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@trivago/prettier-plugin-sort-imports": "5.2.2",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
+    "@types/multer": "2.0.0",
     "@types/node": "22.10.7",
     "@types/supertest": "6.0.2",
     "eslint": "9.18.0",
